# Tesis-ROS-Gazebo-Baxter

./: README.md
launch/: mundo.launch  robots.launch  sensores.launch
models/BANDA_FINAL/: CMakeLists.txt  package.xml
models/BANDA_FINAL/launch/: display.launch  gazebo.launch
models/BANDA_FINAL/meshes/: base_link.STL
models/BANDA_FINAL/urdf/: BANDA_FINAL.csv  BANDA_FINAL.urdf
models/CAJA/: CMakeLists.txt  package.xml
models/CAJA/launch/: display.launch  gazebo1.launch
models/CAJA/meshes/: base_link.STL
models/CAJA/urdf/: caja1.csv  caja1.urdf
models/ball/: model.urdf
models/banda_left/: model.config  model.sdf
models/block/: model.urdf
models/block_blue/: model.urdf
models/block_red/: model.urdf
models/box_left/: model.sdf
models/box_right/: model.config
models/sensor_banda_1/: gazebo.xacro  materials.xacro  robot.xacro
models/sensor_banda_2/: conveyor_belt.urdf  gazebo.xacro  macro.xacro  materials.xacro  robot.xacro
scripts/: MoveControl.py  azul.py  detector.py  home_arms.py  laser_1.py  lector_topico.py  mundo_v.py  objetos.py  posicion_inic.py  proceso.py  prueba_1.py  reading_laser_1.py  reading_laser_2.py  rojo.py  sense_p.py  tuck_arms.py  verde.py
